openexr-c/include/imath_matrix.h

typedef struct Imath_3_0__Matrix44_double__t_s {
    double x[4][4];
} __attribute__((aligned(8))) Imath_3_0__Matrix44_double__t;
typedef Imath_3_0__Matrix44_double__t Imath_M44d_t;
/** Set matrix to scale by given uniform factor
@return const referenced to this */
unsigned int Imath_3_0__Matrix44_double__setScale_uniform(
    Imath_M44d_t * this_
    , Imath_M44d_t const * * return_
    , double s);
/** Return translation component */
unsigned int Imath_3_0__Matrix44_double__translation(
    Imath_M44d_t const * this_
    , Imath_V3d_t * return_);
/** Largest possible negative value */
unsigned int Imath_3_0__Matrix44_double__baseTypeLowest(
    double * return_);
/** Largest possible positive value */
unsigned int Imath_3_0__Matrix44_double__baseTypeMax(
    double * return_);
/** Smallest possible positive value */
unsigned int Imath_3_0__Matrix44_double__baseTypeSmallest(
    double * return_);
/** Smallest possible e for which 1+e != 1 */
unsigned int Imath_3_0__Matrix44_double__baseTypeEpsilon(
    double * return_);
/** Return the number of the row and column dimensions, i.e. 4 */
unsigned int Imath_3_0__Matrix44_double__dimensions(
    unsigned int * return_);