openexr-sys/src/imath_matrix.rs


pub fn Imath_3_0__Matrix44_double__setScale_uniform(this_: *mut Imath_M44d_t, return_: *mut *const Imath_M44d_t, s: c_double) -> Exception;

pub fn Imath_3_0__Matrix44_double__translation(this_: *const Imath_M44d_t, return_: *mut Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Matrix44_double__baseTypeLowest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Matrix44_double__baseTypeMax(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Matrix44_double__baseTypeSmallest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Matrix44_double__baseTypeEpsilon(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Matrix44_double__dimensions(return_: *mut c_uint) -> Exception;


} // extern "C"
